--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,8 +99,8 @@
   }
   
   .hero .gambar_ecosavor img {
-    width: 100%;
-    height: 160%;
+    width: 500px;
+    height: 460px; 
   }
   
   /* .section {
